Initial commit - Career Guidance Chatbot with Gemini Flash

--- a/loader.ipynb
+++ b/loader.ipynb
@@ -952,13 +952,21 @@
     "# At the bottom of loader.py or in a separate cell if using Jupyter Notebook\n",
     "process_pdfs_incremental(directory=\"data/\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1af1dbc1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.12.4 (64-bit)",
+   "display_name": ".venv",
    "language": "python",
-   "name": "python312"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -970,7 +978,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
